finished basic css for createPost and fixed spacing in header.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,13 +3,14 @@ header {
     background-color: rgb(255, 255, 255);
     text-align: left;
     height: 18vh;
+    margin-bottom: 2rem;
 }
 
 .logo {
     width: 165px;
     height: 85px;
     margin: 1rem;
-    padding-right: 5rem;
+    padding-right: 4rem;
 }
 
 h2 {
@@ -18,6 +19,7 @@ h2 {
 
 ul {
     display: flex;
+    gap: 4rem;
     list-style: none;
     background-color: #f0f0f0;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
